--- a/LcodeMVP/package.json
+++ b/LcodeMVP/package.json
@@ -2,13 +2,23 @@
   "name": "lcodemvp",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "nodemon server/server/app.js",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.6",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "express-partials": "^0.3.0",
+    "fast-csv": "^4.3.6",
+    "fs": "^0.0.1-security",
+    "pg": "^8.8.0",
+    "postgres": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
