--- a/LcodeMVP/package.json
+++ b/LcodeMVP/package.json
@@ -11,16 +11,23 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "csv-parse": "^5.3.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-partials": "^0.3.0",
     "fast-csv": "^4.3.6",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "postgres": "^3.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-fs": "^1.0.0-beta.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
