--- a/LcodeMVP/package.json
+++ b/LcodeMVP/package.json
@@ -22,11 +22,14 @@
     "fast-csv": "^4.3.6",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "postgres": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.1",
     "vite-plugin-fs": "^1.0.0-beta.4"
   },
   "devDependencies": {
